# role-play

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENCE.md  Pipfile  Procfile  README.md  codespell-ignore-words.txt  conftest.py  docker-compose.yml  fly.ephemeral.toml  fly.toml  manage.py  poe_tasks.toml  pyproject.toml  pytest.ini  pyvenv.cfg  renovate.json  requirements.txt  ruff.toml  setup.cfg  tasks.py
.claude/agents/: django-reviewer.md  test-generator.md
.github/workflows/: ci.yml  coverage.yml  django.yml  fly-deploy.yml
.serena/: project.yml
adventure/: constants.py  exceptions.py  forms.py  models.py  urls.py  views.py
adventure/migrations/: 0001_initial.py  0002_act_location_npc_scene.py  0003_alter_npc_role_alter_act_unique_together_and_more.py  0004_encounter_encountermonster_encounter_monsters.py  0005_alter_encounter_options_encounter_order_and_more.py  0006_migrate_from_master.py  0007_drop_master_tables.py
adventure/services/: ai.py
adventure/tests/: factories.py  test_ai_service.py  test_ai_views.py  test_constants.py  test_migrations.py  test_models.py  test_sub_views.py  test_views.py
ai/: adventure.py  generators.py  test_generators.py
bestiary/: apps.py
bestiary/constants/: monsters.py
bestiary/fixtures/: monster_attributes.yaml  monsters.yaml
bestiary/migrations/: 0001_initial.py  0002_normalize_json_fields.py  0003_migrate_json_to_relations.py  0004_drop_json_fields.py  0005_rename_json_fields_add_spellcasting.py  0006_migrate_remaining_json.py  0007_drop_remaining_json_fields.py
bestiary/models/: __init__.py  monsters.py
bestiary/tests/: factories.py
character/: abilities.py  ability_modifiers.py  admin.py  character_attributes_builders.py  character_builder.py  exceptions.py  flows.py  forms.py  models.py  services.py  urls.py  views.py
character/constants/: abilities.py  backgrounds.py  character.py  classes.py  conditions.py  equipment.py  feats.py  klasses.py  monsters.py  races.py  skills.py  species.py  spells.py
character/equipment/: choices_providers.py
character/fixtures/: abilities.yaml  advancement.yaml  class_features.yaml  classes.yaml  conditions.yaml  equipment.yaml  feats.yaml  klasses.yaml  languages.yaml  magic_items.yaml  monsters.yaml  races.yaml  senses.yaml  skills.yaml  species.yaml  species_traits.yaml  spell_effects.yaml  spells.yaml
character/forms/: backgrounds.py  character.py  equipment.py  equipment_choices_providers.py  equipment_selection.py  mixins.py  portraits.py  post_creation.py  skills.py  wizard_forms.py
character/migrations/: 0001_initial.py  0002_alter_classadvancement_level.py  0002_character_user.py  0002_equipmentpack.py  0002_initial.py  0003_adventuringgear.py  0003_alter_character_race.py  0003_character_creation_state.py  0003_remove_classfeature_hit_points_classfeature_hit_dice_and_more.py  0004_alter_classfeature_hp_first_level_and_more.py  0004_character_level.py  0004_remove_character_creation_state_and_more.py  0004_rename_adventuringgear_gear.py  0005_alter_toolsettings_name.py  0005_character_hit_dice.py  0005_character_proficiency_bonus.py  0005_rename_equipmentpack_pack.py  0006_alter_character_user.py  0006_character_class_name.py  0006_character_hp_increase.py  0006_tool.py  0007_alter_abilitytype_name.py  0007_alter_proficiency_options_and_more.py  0007_character_charisma_character_constitution_and_more.py  0007_character_portrait.py  0007_remove_tool_id_tool_name_tool_tool_type_and_more.py  0008_alter_ability_modifier_alter_ability_score.py  0008_character_gender_alter_character_class_name.py  0008_remove_proficiency_class_feature_and_more.py  0008_sense_alter_ability_options_and_more.py  0008_skill.py  0009_inventory_equipment.py  0009_remove_character_proficiencies_and_more.py  0009_remove_character_proficiency_bonus.py  0009_remove_skill_id_alter_skill_name.py  0009_sense_alter_ability_options_and_more.py  0010_character_ac.py  0010_character_skills.py  0010_condition_charactercondition.py  0010_remove_character_abilities_character_senses.py  (+112 more)
character/models/: __init__.py  abilities.py  advancement.py  character.py  classes.py  conditions.py  disadvantages.py  equipment.py  feats.py  klasses.py  magic_items.py  monsters.py  proficiencies.py  races.py  skills.py  species.py  spell_effects.py  spells.py
character/tests/: conftest.py  factories.py  test_abilities.py  test_ability_modifiers.py  test_background_builder.py  test_character_builders.py  test_class_builder.py  test_models.py  test_services.py  test_views.py
character/utils/: abilities.py  backgrounds.py  builders.py  cache.py  classes.py  equipment.py  equipment_parsers.py  proficiencies.py  race_builders.py  saving_throws.py  skills.py
character/views/: abilities.py  backgrounds.py  character.py  creation.py  equipment.py  equipment_selection.py  glossary.py  hp.py  mixins.py  post_creation.py  skills.py  skills_selection.py  spells.py
chat/: admin.py  consumers.py  models.py  routing.py  tests.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_remove_message_character_message_user.py  0003_room_message_room.py
docs/plans/: 2026-02-03-dm-dashboard-design.md  2026-02-20-ux-redesign-design.md  (+22 more)
equipment/: exceptions.py
game/: admin.py  attack.py  channel_messages.py  commands.py  consumers.py  context_processors.py  event_enrichers.py  exceptions.py  flows.py  forms.py  mastery.py  messages.py  models.py  presenters.py  rolls.py  routing.py  schemas.py  serializers.py  services.py  spell.py  tasks.py  tests.py  urls.py  utils.py  views.py
games/: admin.py  models.py  views.py
magic/: apps.py
master/: admin.py  forms.py  models.py  urls.py  views.py
media/: mini-skull.xcf  red-skull.xcf  wizard.xcf
role_play/: asgi.py  pre_settings.py  prod_settings.py  settings.py  urls.py
tasks/: __init__.py  db.py  dev.py  eph.py  prod.py  stg.py  test.py
user/: models.py  views.py
utils/: constants.py  converters.py  dice.py  dices.py  factories.py  lists.py  random.py  test_dice.py  test_dices.py
(+547 files in other folders)
