[tool.coverage.run]
plugins = ['django_coverage_plugin']
omit = ["manage.py", "tasks/*"]

[tool.ruff]
exclude = ["role_play/asgi.py", "role_play/urls.py", "role_play/settings/*"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]

[project]
authors = [
    {name = "Eric Grabarczyk", email = "eric.grabarczyk@gmail.com"},
]
license = {text = "GNU Affero General Public License v3.0"}
requires-python = "<4.0,>=3.13"
dependencies = [
    "async-timeout",
    "celery",
    "channels",
    "channels-redis",
    "daphne",
    "dice",
    "dj-database-url",
    "django~=5.1",
    "django-celery-beat",
    "django-extensions",
    "django-formtools",
    "django-model-utils",
    "django-viewflow",
    "email-validator",
    "gunicorn",
    "invoke",
    "psycopg[binary]",
    "pydantic",
    "pyyaml",
    "redis",
    "sentry-sdk[django]",
    "whitenoise",
]
name = "role-play"
version = "0.12.0"
description = "Role playing game."
readme = "README.md"

[dependency-groups]
dev = [
    "coverage",
    "django-coverage-plugin",
    "django-debug-toolbar",
    "factory-boy",
    "faker",
    "freezegun",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-dependency",
    "pytest-django",
    "pytest-mock",
]
