# Project metadata and dependencies
# Tool configurations are in separate files:
# - poe_tasks.toml: Task runner configuration
# - ruff.toml: Linter and formatter configuration
# - pytest.ini: Test configuration

[project]
name = "role-play"
version = "0.12.0"
description = "Role playing game."
readme = "README.md"
authors = [{ name = "Eric Grabarczyk", email = "eric.grabarczyk@gmail.com" }]
license = { text = "GNU Affero General Public License v3.0" }
requires-python = "<4.0,>=3.14"
dependencies = [
    "anthropic",
    "async-timeout",
    "celery",
    "channels",
    "channels-redis",
    "daphne",
    "dj-database-url",
    "django~=5.2",
    "django-celery-beat",
    "django-extensions",
    "django-formtools",
    "django-model-utils",
    "django-viewflow",
    "email-validator",
    "gunicorn",
    "psycopg[binary]",
    "pydantic",
    "pyyaml",
    "redis",
    "sentry-sdk[django]",
    "whitenoise",
]

[dependency-groups]
dev = [
    "coverage",
    "django-coverage-plugin",
    "pytest-cov",
    "django-debug-toolbar",
    "factory-boy",
    "faker",
    "freezegun",
    "poethepoet",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-dependency",
    "pytest-django",
    "pytest-mock",
    "pytest-xdist",
]

# Coverage configuration (kept here as it's small and well-integrated)
[tool.coverage.run]
omit = ["manage.py"]
parallel = true
branch = true
source = [
    "ai",
    "character",
    "game",
    "master",
    "user",
    "utils",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
